# psyche-agent-dx

./: .gitignore  README.md  pyproject.toml
data/knowledge/: default_corpus.jsonl
docs/: architecture.md  rag_todo.md
scripts/: ocr_pdf_to_jsonl.py
src/psyche_agent_dx/: __init__.py  agents.py  api.py  config.py  knowledge.py  llm.py  main.py  pipeline.py  prompts.py  schemas.py
tests/: test_knowledge.py  test_mvp.py
