[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psyche-agent-dx"
version = "0.1.0"
description = "Multi-agent collaborative LLM system for mental health diagnosis support"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "zornTang" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
