[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psyche-agent-dx"
version = "0.1.0"
description = "Multi-agent collaborative LLM system for mental health diagnosis support"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "zornTang" }
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.7,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
local-llm = [
  "sentencepiece>=0.2,<1.0",
  "torch>=2.0,<3.0",
  "transformers>=4.27.1,<5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
